# ZenithOS

./: .gitignore  Cargo.toml  Makefile  README.md  release_zenith.sh  zenith.db
autonomic/: Cargo.toml
autonomic/src/: lib.rs
bench_latency/: Cargo.toml
bench_latency/src/: main.rs
bootloader/src/: main.rs
camera_driver/: Cargo.toml
camera_driver/src/: lib.rs
deepsurf/: Cargo.toml
deepsurf/src/: lib.rs
display_driver/: Cargo.toml
display_driver/src/: lib.rs
doc/: comprehensive_report.md
ecdysis/: Cargo.toml
ecdysis/src/: lib.rs
federated_core/: Cargo.toml
federated_core/src/: lib.rs
governance/: Cargo.toml
governance/src/: lib.rs
helix_db/: Cargo.toml
helix_db/src/: lib.rs
loader/src/: lib.rs
mesh_network/: Cargo.toml
mesh_network/src/: lib.rs
mic_driver/: Cargo.toml
mic_driver/src/: lib.rs
missions/hello_zenith/: Cargo.toml
network_driver/: Cargo.toml
network_driver/src/: lib.rs
oms/: Cargo.toml
oms/src/: main.rs
ostd/: Cargo.toml
ostd/src/: lib.rs
qemu/: zenith-machine.conf
red_team/: Cargo.toml
red_team/src/: main.rs
sandcell/: Cargo.toml
sandcell/src/: lib.rs
scheduler/src/: lib.rs
sovereign_sync/: Cargo.toml
sovereign_sync/src/: lib.rs
vga_driver/: Cargo.toml
vga_driver/src/: main.rs
watchdog/: Cargo.toml
watchdog/src/: main.rs
zapi/: Cargo.toml
zapi/src/: lib.rs
zenith_cli/: Cargo.toml
zenith_daemon/: Cargo.toml
zenith_daemon/src/: db.rs  intent.rs  main.rs  monitor.rs  optimizer.rs  score.rs  server.rs
zenith_daemon/static/: index.html
zpm/: Cargo.toml
(+3 files in other folders)
