[workspace]
members = [
    "sandcell",
    "ecdysis",
    "helix_db",
    "deepsurf",
    "vga_driver",
    "display_driver",
    "network_driver",
    "mic_driver",
    "camera_driver",
    "red_team",
    "ostd",
    "bootloader",
    "scheduler",
    "zenith_cli",
    "oms",
    "bench_latency",
    "loader",
    "zapi",
    "zpm",
    "missions/hello_zenith",
    "autonomic",
    "watchdog",
    "federated_core",
    "mesh_network",
    "sovereign_sync",
    "governance",
]

resolver = "2"

# Profile for Size Optimization (Kernel)
[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
